--- a/styles/style.css
+++ b/styles/style.css
@@ -5,10 +5,13 @@ header {
   align-items: baseline;
   justify-content: center;
 }
-h1 {
+header h1 {
   padding-right: 25px;
 }
-.content-container {
+header h4 {
+  text-emphasis: italic;
+}
+.home-container {
   display: flex;
   flex-direction: column;
   align-items: center;
